--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -33,8 +33,8 @@ textarea {
 
 /** header **/
 .loginbar-wrapper {
-	height: 59px;
-	overflow: hidden;
+	height: 60px;
+	/*overflow: hidden;*/
 }
 .loginbar-wrapper .login > div {
 	padding-top: 9px;
@@ -45,7 +45,7 @@ textarea {
 	margin-bottom: 0;
 	margin-right: 9px;
 	font-size: 12px;
-	line-height: 41px;
+	line-height: 41px\9;
 }
 .loginbar-wrapper .login-form a.btn {
 	margin: 2px 0 0 5px;
@@ -67,8 +67,8 @@ textarea {
 		margin-top: -1px;
 	}
 .loginbar-wrapper .login div.forgot-pwd {
-	padding-left: 14px;
-	padding-right: 14px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 	.loginbar-wrapper .login div.forgot-pwd a {
 		font-size: 12px;
@@ -110,14 +110,22 @@ textarea {
 	margin: 30px 0 0 0;
 	background: url(/assets/banner-bg.png) 0 0 repeat-x;
 }
+.banner .tabs{
+    position: absolute;
+    top:230px;
+    width: 1024px;
+    z-index: 200;
+}
 	.banner-unit {
+        text-align: center;
 		top: 0;
-		width: 1024px;
-		height: 296px;
+		/*width: 1024px;*/
+		height: 210px;
 		position: relative;
+        margin-bottom: 100px;
 	}
 		.banner-unit img {
-			position: absolute;
+			/*position: absolute;*/
 			top: 0;
 			left: 0;
 		}
@@ -126,28 +134,28 @@ textarea {
 			text-align: right;
 		}
 		.crowdsouced-banner .buttons {
-			top: 160px;
-			left: 625px;
+			top: 120px;
+			left: 590px;
 		}
 		.compete-code-win-banner .buttons {
-			top: 170px;
-			left: 70px;
+			top: 120px;
+			left: 110px;
 		}
 		.build-it-a-banner .buttons {
-			top: 150px;
-			left: 70px;
+			top: 110px;
+			left: 125px;
 		}
 		.build-it-b-banner .buttons {
-			top: 150px;
-			left: 70px;
+			top: 110px;
+			left: 125px;
 		}
 		.connect-with-cloud-banner .buttons {
-			top: 180px;
-			left: 695px;
+			top: 120px;
+			left: 640px;
 		}
 			.banner-unit a.get-started {
 				display: block;
-				height: 65px;
+				height: 50px;
 				color: #fff;
 				text-align: center;
 				background: url("/assets/tab-large.png") 0 0 no-repeat;
@@ -161,11 +169,11 @@ textarea {
 					.banner-unit a.get-started span span {
 						display: block;
 						width: 217px;
-						height: 65px;
-						font-size: 30px;
+						height: 50px;
+						font-size: 24px;
 						padding: 0 9px;
 						font-weight: bold;
-						line-height: 65px;
+						line-height: 50px;
 						background: url("/assets/tab-large.png") 0 -390px repeat-x;
 					}
 			.banner-unit a.get-started:hover {
@@ -238,8 +246,9 @@ ul.share li {
 	height: 135px;
 	margin-bottom: 0;
 }
-	.member-profile .well h2 a {
+	.member-profile .well h2{
 		font-size: 21px;
+        font-weight: bold;
 	}
 	.member-profile .well .top span {
 		font-size: 19px;
@@ -306,7 +315,7 @@ ul.share li {
 	/* end of level */
 
 .member-profile #quotes .item {
-	height: 25px;
+	/*height: 25px;*/
 	text-align: center;
 	width: 800px;
 	margin: 40px auto;
@@ -487,7 +496,7 @@ ul.brief-info {
 			height: 300px;
 		}
 		.member-profile .span4 .total-link {
-			margin: 60px 0 20px 20px; 
+			margin: 20px 0 20px 20px;
 		}
 
 
@@ -500,11 +509,11 @@ ul.brief-info {
 	margin-bottom: 0;
 }
 #register-modal p {
-	font-weight: bold;
+	/*font-weight: bold;*/
 	margin-bottom: 10px;
 }
-#register-modal ul.unstyled, ol.unstyled {
-  	margin: 0;
+#register-modal ul.unstyled, #register-modal  ol.unstyled {
+  	/*margin: 0;*/
   	clear: both;
   	height: 71px;
 }
@@ -512,6 +521,7 @@ ul.brief-info {
 		/*width: 71px;*/
 		*float: left;
 		*display: inline;
+        margin-bottom: 5px;
 	}
 	#register-modal .form-horizontal .title {
 		margin-bottom: 0;
@@ -523,7 +533,7 @@ ul.brief-info {
 		margin: 15px 0 0 0;
 	}
 	#register-modal .form-horizontal .control-label {
-		font-weight: bold;
+		/*font-weight: bold;*/
 		width: 200px;
 		padding-right: 15px;
 	}
@@ -539,7 +549,7 @@ ul.brief-info {
 	}
 
 #forgot-password-modal p {
-  font-weight: bold;
+  /*font-weight: bold;*/
 }
 
 #team-member-modal .title {
@@ -548,10 +558,10 @@ ul.brief-info {
 #team-member-modal .photo {
 	width: 173px;
 	height: 173px;
-	margin: 0 30px;
+	margin: 0 15px 0 30px;
 }
 #team-member-modal .info {
-	width: 740px;
+	width: 570px;
 }
 #team-member-modal .well {
 	background: transparent;
@@ -566,3 +576,8 @@ ul.brief-info {
 	line-height: 24px;
 }
 /* end of modal */
+
+.online-status{
+    line-height: 40px;
+    color: white;
+}
