--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -5,21 +5,11 @@
 
         <div class="title"><h1>HAPPENING NOW</h1></div>
         <div class="row-fluid" id="status">
-            <div>
-                <span class="icon-active-members"></span><strong><%= number_with_delimiter(@stats['members'], :delimiter => ',') %></strong>ACTIVE MEMBERS
-            </div>
-            <div>
-                <span class="icon-competing-today"></span><strong><%= @stats['competing_today'].to_i %></strong>COMPETING TODAY
-            </div>
-            <div>
-                <span class="icon-available-prize-money"></span><strong><%= number_to_currency(@stats['money_up_for_grabs'], :precision => 0) %></strong>AVAILABLE PRIZE MONEY
-            </div>
-            <div>
-                <span class="active-challenges"></span><strong><%= @stats['challenges_open'] %></strong>ACTIVE CHALLENGES
-            </div>
-            <div>
-                <span class="counteries-working"></span><strong><%= @stats['countries_working'] %></strong>COUNTRIES WORKING
-            </div>
+            <div><div><div><span class="icon-active-members"></span><strong><%= number_with_delimiter(@stats['members'], :delimiter => ',') %></strong>ACTIVE MEMBERS</div></div></div>
+            <div><div><div><span class="icon-competing-today"></span><strong><%= @stats['competing_today'].to_i %></strong>COMPETING TODAY</div></div></div>
+            <div><div><div><span class="icon-available-prize-money"></span><strong><%= number_to_currency(@stats['money_up_for_grabs'], :precision => 0) %></strong>AVAILABLE PRIZE MONEY</div></div></div>
+            <div><div><div><span class="active-challenges"></span><strong><%= @stats['challenges_open'] %></strong>ACTIVE CHALLENGES</div></div></div>
+            <div><div><div><span class="counteries-working"></span><strong><%= @stats['countries_working'] %></strong>COUNTRIES WORKING</div></div></div>
         </div>
         <br/>
 
@@ -102,9 +92,9 @@
 
         <div class="title"><h1>BADGES</h1></div>
         <div class="row-fluid" id="badges">
-            <div><table><tr><td><span class="badget-general"></span></td><td><a href="/badges">CloudSpokes General Badges</a></td></tr></table></div>
-            <div><table><tr><td><span class="badget-tech"></span></td><td><a href="/badges">Technology Badges</a></td></tr></table></div>
-             <div><table><tr><td><span class="badget-dev"></span></td><td><a href="/badges">Develop Your Skills" Badges</a></td></tr></table></div>
+            <a href="/badges"><div><table><tr><td><span class="badget-general"></span></td><td>CloudSpokes General Badges</td></tr></table></div></a>
+            <a href="/badges"><div><table><tr><td><span class="badget-tech"></span></td><td>Technology Badges</td></tr></table></div></a>
+            <a href="/badges"><div><table><tr><td><span class="badget-dev"></span></td><td>Develop Your Skills" Badges</td></tr></table></div></a>
         </div>
         <br/>
 
@@ -115,7 +105,7 @@
             </div>
 
             <div class="span6">
-                <div class="title"><h1 class="rss">POSTS</h1></div>
+               <div class="title"><h1 class="rss">POSTS</h1></div>
                 <%= render :partial => "shared/feed_items", :locals => { :items => @post_feed_items } %>
             </div>
         </div>
