layout changes from css

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -17,7 +17,7 @@
                             ================================================== -->
                     <div class="hidden-phone">
                         <div class="banner-unit crowdsouced-banner">
-                            <img src="/assets/banner/crowdsourced.jpg" alt=""/>
+                            <img src="/assets/banner/<%= ['crowdsourced','connect-with-cloud'].sample %>.jpg" alt=""/>
                             <div class="buttons">
                                 <a class="get-started" href="/contact"><span><span>GET STARTED</span></span></a>
                                 <a class="learn-more" href="/how-it-works">Or Learn More</a>
@@ -64,7 +64,7 @@
                             ================================================== -->
                     <div class="hidden-phone">
                         <div class="banner-unit compete-code-win-banner">
-                            <img src="/assets/banner/compete-code-win.jpg" alt=""/>
+                            <img src="/assets/banner/<%= ['build-it-a','build-it-b','compete-code-win'].sample %>.jpg" alt=""/>
                             <div class="buttons">
                                 <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>GET STARTED</span></span></a>
                                 <a class="learn-more" href="/how-it-works-members">Or Learn More</a>
