--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                       <input placeholder="Username" type="text" name="user[username]"/>
                       <input placeholder="Password" type="password" name="user[password]"/>
                       <input type="hidden" name="user[remember_me]" value="1"/>
-                      <div class="btn"><input type="submit" class="btn" value="LOGIN"></div>
+                      <div class="btn"><input type="submit" class="btn" style="width:60px" value="LOGIN"></div>
                   </form>
               </div>
               <div class="login-using">
@@ -58,8 +58,7 @@
         <% else %>
           <div class="logined">
               <div class="pull-left">
-                  <a class="btn btn-grey" href="#"><span><em><i class="icon-green"></i></em>7 MEMBERS ONLINE</span></a>
-                  <a class="btn btn-grey" href="#"><span><em><i class="icon-orange"></i></em>52 MEMBERS WORKING</span></a>
+                <span class="online-status">52 MEMBERS WORKING</span>
               </div>
 
               <div class="pull-right">
@@ -92,8 +91,10 @@
               <li><%= link_to 'BADGES', '/badges' %></li>
               <li><%= link_to 'BLOG', 'http://blog.cloudspokes.com' %></li>
               <li><%= link_to 'HELP', '/help' %></li>
-              <li<% if @forums_tick %> class="active"<% end %>><%= link_to 'FORUMS', '/forums' %></li>
-              <li<% if @account_tick %> class="active"<% end %>><%= link_to 'ACCOUNT', main_app.account_path %></li>
+              <li<% if @forums_tick %> class="active"<% end %>><%= link_to 'FORUMS', '/forums' %></li>              
+              <% if current_user %>
+                <li<% if @account_tick %> class="active"<% end %>><%= link_to 'ACCOUNT', main_app.account_path %></li>
+              <% end %>
           </ul>
 
 
